Promoted the Models to a Shared class library.

--- a/API/FunctionApps/PatientRecordsFunctionApp/PatientRecordsFunctionApp.csproj
+++ b/API/FunctionApps/PatientRecordsFunctionApp/PatientRecordsFunctionApp.csproj
@@ -28,4 +28,7 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\PcmsApi.Core\PcmsApi.Core.csproj" />
+  </ItemGroup>
 </Project>
