Adding EFCore against my better judgement...

--- a/API/Shared/PcmsApi.Core/PcmsApi.Core.csproj
+++ b/API/Shared/PcmsApi.Core/PcmsApi.Core.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers> <!-- Add your target RIDs here -->
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
+  </ItemGroup>
 
 </Project>
